--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     ]
   },
   "scripts": {
-    "build:onpremise": "cross-env ROOT_URL=https://csb-bogdan.dev NODE_OPTIONS=\"--max-old-space-size=4096\" yarn build:onlyselected",
+    "build:onpremise":"cross-env ROOT_URL=https://csb-bogdan.dev NODE_OPTIONS=\"--max-old-space-size=4096\" yarn build:onlyselected",
     "build:onlyselected": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" lerna run build --scope app --stream",
-    "build": "cross-env ROOT_URL=https://csb-bogdan.dev NODE_OPTIONS=\"--max-old-space-size=4096\" yarn build:deps && yarn build:prod",
+    "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" yarn build:deps && yarn build:prod",
     "build:clean": "lerna run build:clean --scope app --scope homepage && rimraf www",
     "build:common": "lerna run build:dev --scope @codesandbox/common --stream",
     "build:components": "lerna run build:dev --scope @codesandbox/components --stream",
